--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <section class="hero is-primary is-bold" role="banner">
+        <section class="hero is-dark is-bold" role="banner">
             <div class="hero-body">
                 <div class="container has-text-centered">
                     <h1 class="title is-1 has-text-white">Cygraform srl</h1>
@@ -76,33 +76,43 @@
             </div>
         </section>
 
-        <nav class="navbar is-light" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-            <a class="navbar-item" href="#">
-              <img src="images/logo.png" alt="Logo Cygraform" style="max-height: 2.5rem;">
-            </a>
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainMenu">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
-          <div id="mainMenu" class="navbar-menu">
-            <div class="navbar-start">
-              <a class="navbar-item" href="#massicot-title">Massicot</a>
-              <a class="navbar-item" href="#pantographe-title">Pantographe</a>
-              <a class="navbar-item" href="#photograveuse-title">Photograveuse</a>
-            </div>
-          </div>
-        </nav>
+    
     </header>
 
     <main class="container" id="main-content">
         <section class="section">
             <div class="container">
                 <p class="is-size-5 has-text-centered">
-                    Découvrez une sélection unique de machines anciennes ayant servi plus d’un demi-siècle dans nos ateliers en Belgique. Ces pièces rares témoignent d’un savoir-faire artisanal et d’une histoire industrielle exceptionnelle.
+                    Sélection de machines anciennes ayant servi plus d’un demi-siècle dans notre atelier en Belgique. Ce sont des pièces rares qui témoignent d’un savoir-faire artisanal et d’une histoire, nous cherchons un repreneur pour qu'elles ne finissent pas à la ferraille.
                 </p>
+                   <section class="section">
+          <div class="columns is-centered is-variable is-4">
+              <div class="column is-narrow has-text-centered">
+                <span class="is-size-6 has-text-dark">Massicot</span>
+              <a href="#massicot-title" style="text-decoration:none;">
+                <figure class="image is-96x96" style="margin:auto;">
+                  <img src="images/Massicot_1.jpg" alt="Massicot miniature" style="border-radius:8px; border:2px solid #3273dc;">
+                </figure>
+              </a>
+            </div>
+            <div class="column is-narrow has-text-centered">
+                <span class="is-size-6 has-text-dark">Pantographe</span>
+              <a href="#pantographe-title" style="text-decoration:none;">
+                <figure class="image is-96x96" style="margin:auto;">
+                  <img src="images/Pantographe_1.jpg" alt="Pantographe miniature" style="border-radius:8px; border:2px solid #3273dc;">
+                </figure>
+              </a>
+            </div>
+            <div class="column is-narrow has-text-centered">
+                <span class="is-size-6 has-text-dark">Photograveuse</span>
+              <a href="#photograveuse-title" style="text-decoration:none;">
+                <figure class="image is-96x96" style="margin:auto;">
+                  <img src="images/photograveuse_1.png" alt="Photograveuse miniature" style="border-radius:8px; border:2px solid #3273dc;">
+                </figure>
+              </a>
+            </div>
+          </div>
+        </section>
             </div>
         </section>
 
@@ -149,6 +159,26 @@
                         Cette machine est un <strong>pantographe de gravure</strong> fabriqué par <strong>Hunter-Penrose Ltd</strong>, une entreprise britannique historique spécialisée dans l'équipement pour les arts graphiques et la photogravure. Les plaques de la machine indiquent qu'elle a été fournie par <strong>L. Geerts Matériel pour les Arts Graphiques</strong>, un distributeur belge, ce qui confirme son marché de l'époque.
                     </p>
                     <p>
+                        Ces machines étaient utilisées pour graver des dessins, des logos et des textes sur des plaques de métal à partir d'un modèle plus grand. L'état actuel montre l'usure du temps, mais elle reste une pièce d'équipement fascinante pour les collectionneurs ou pour ceux qui s'intéressent aux techniques d'impression traditionnelles.
+                    </p>
+                </div>
+                <div class="product-gallery" data-machine="pantographe">
+                    <div class="main-image-container" tabindex="0" aria-label="Voir l'image principale du pantographe">
+                        <img src="images/Pantographe_1.jpg" alt="Pantographe - vue générale" loading="lazy">
+                    </div>
+                    <div class="thumbnails" aria-label="Miniatures du pantographe">
+                        <img src="images/Pantographe_1.jpg" alt="Pantographe - vue générale" loading="lazy">
+                        <img src="images/Pantographe_4.jpg" alt="Pantographe - logo Hunter-Penrose Ltd" loading="lazy">
+                        <img src="images/Pantographe_2.jpg" alt="Pantographe - détail du système de courroie" loading="lazy">
+                        <img src="images/Pantographe_5.jpg" alt="Pantographe - détail de la poulie et de la courroie" loading="lazy">
+                        <img src="images/Pantographe_3.jpg" alt="Pantographe - plaque du distributeur L. Geerts" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
         <section class="section" aria-labelledby="photograveuse-title">
             <div class="container box">
                 <h2 id="photograveuse-title" class="title is-2 has-text-centered">Photograveuse</h2>
@@ -171,40 +201,13 @@
             </div>
         </section>
 
-        <section class="section">
-          <div class="columns is-centered is-variable is-4">
-            <div class="column is-narrow has-text-centered">
-              <a href="#massicot-title" style="text-decoration:none;">
-                <figure class="image is-96x96" style="margin:auto;">
-                  <img src="images/Massicot_1.jpg" alt="Massicot miniature" style="border-radius:8px; border:2px solid #3273dc;">
-                </figure>
-                <span class="is-size-6 has-text-dark">Massicot</span>
-              </a>
-            </div>
-            <div class="column is-narrow has-text-centered">
-              <a href="#pantographe-title" style="text-decoration:none;">
-                <figure class="image is-96x96" style="margin:auto;">
-                  <img src="images/Pantographe_1.jpg" alt="Pantographe miniature" style="border-radius:8px; border:2px solid #3273dc;">
-                </figure>
-                <span class="is-size-6 has-text-dark">Pantographe</span>
-              </a>
-            </div>
-            <div class="column is-narrow has-text-centered">
-              <a href="#photograveuse-title" style="text-decoration:none;">
-                <figure class="image is-96x96" style="margin:auto;">
-                  <img src="images/photograveuse_1.png" alt="Photograveuse miniature" style="border-radius:8px; border:2px solid #3273dc;">
-                </figure>
-                <span class="is-size-6 has-text-dark">Photograveuse</span>
-              </a>
-            </div>
-          </div>
-        </section>
+     
     </main>
 
     <footer class="footer has-text-centered" role="contentinfo">
         <div class="container">
-            <p class="has-text-light">
-                <strong>Pour plus d'informations ou pour organiser un enlèvement,</strong> veuillez nous contacter.
+            <p>
+                <strong style="color: #f5f5f5!important;">Pour plus d'informations ou pour organiser un enlèvement,</strong> veuillez nous contacter.
             </p>
             <p>
                 <a href="mailto:contact@cygraform.com" class="has-text-info">
