--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             line-height: 1.6;
         }
         .hero.is-primary { background-color: #363636; }
+         .hero.is-darker {
+            background-color: #696969;
+            color: #fff;
+            }
         .section h2.title {
             color: #363636;
             border-bottom: 2px solid #3273dc;
@@ -65,10 +69,10 @@
 </head>
 <body>
     <header>
-        <section class="hero is-dark is-bold" role="banner">
+        <section class="hero is-darker is-bold is-medium" role="banner">
             <div class="hero-body">
                 <div class="container has-text-centered">
-                    <h1 class="title is-1 has-text-white">Cygraform srl</h1>
+                    <img src="images/logo.png" alt="Cygraform srl">
                     <h2 class="subtitle is-3 has-text-white">
                         Trésors d’atelier : machines anciennes, héritage vivant
                     </h2>
@@ -83,7 +87,7 @@
         <section class="section">
             <div class="container">
                 <p class="is-size-5 has-text-centered">
-                    Sélection de machines anciennes ayant servi plus d’un demi-siècle dans notre atelier en Belgique. Ce sont des pièces rares qui témoignent d’un savoir-faire artisanal et d’une histoire, nous cherchons un repreneur pour qu'elles ne finissent pas à la ferraille.
+                    Notre société, forte de plus d’un demi-siècle d’activité, a consacré son savoir-faire à la photogravure et au prépresse, au service de l’imprimerie, du carton ondulé et même de l’impression de poches de perfusion. Aujourd’hui, l’activité s’arrête, mais il nous reste quelques machines anciennes, témoins précieux d’une histoire artisanale et industrielle. Nous espérons qu’elles trouveront un repreneur passionné, afin qu’elles continuent à vivre plutôt que de finir à la ferraille.
                 </p>
                    <section class="section">
           <div class="columns is-centered is-variable is-4">
@@ -192,10 +196,11 @@
                         <img src="images/photograveuse_1.png" alt="Photograveuse - vue principale" loading="lazy">
                     </div>
                     <div class="thumbnails" aria-label="Miniatures de la photograveuse">
-                        <img src="images/photograveuse_2.png" alt="Photograveuse - vue 1" loading="lazy">
-                        <img src="images/photograveuse_3.png" alt="Photograveuse - vue 2" loading="lazy">
-                        <img src="images/photograveuse_4.png" alt="Photograveuse - vue 3" loading="lazy">
-                        <img src="images/photograveuse_5.png" alt="Photograveuse - vue 4" loading="lazy">
+                        <img src="images/photograveuse_1.png" alt="Photograveuse - vue 1" loading="lazy">
+                        <img src="images/photograveuse_2.png" alt="Photograveuse - vue 2" loading="lazy">
+                        <img src="images/photograveuse_3.png" alt="Photograveuse - vue 3" loading="lazy">
+                        <img src="images/photograveuse_4.png" alt="Photograveuse - vue 4" loading="lazy">
+                        <img src="images/photograveuse_5.png" alt="Photograveuse - vue 5" loading="lazy">
                     </div>
                 </div>
             </div>
