--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                 <strong style="color: #f5f5f5!important;">Pour plus d'informations ou pour organiser un enlèvement,</strong> veuillez nous contacter.
             </p>
             <p>
-                <a href="mailto:contact@cygraform.com" class="has-text-info">
+                <a href="mailto:cygraformsrl@gmail.com" class="has-text-info">
                     <span class="icon"><i class="fas fa-envelope"></i></span>
-                    contact@cygraform.com
+                    envoyé nous un mail
                 </a>
             </p>
         </div>
