--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <p>
                 <a href="mailto:cygraformsrl@gmail.com" class="has-text-info">
                     <span class="icon"><i class="fas fa-envelope"></i></span>
-                    envoyez nous un mail
+                    📧 envoyez nous un mail 
                 </a>
             </p>
         </div>
