--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         .hero.is-primary { background-color: #363636; }
          .hero.is-darker {
             background-color: #696969;
+            opacity: 0.8;
             color: #fff;
             }
         .section h2.title {
