--- a/index.html
+++ b/index.html
@@ -88,37 +88,39 @@
     <main class="container" id="main-content">
         <section class="section">
             <div class="container">
-                <p class="is-size-5 has-text-centered">
-                    Notre société, forte de plus d’un demi-siècle d’activité, a consacré son savoir-faire à la photogravure et au prépresse, au service de l’imprimerie, du carton ondulé et même de l’impression de poches de perfusion. Aujourd’hui, l’activité s’arrête, mais il nous reste quelques machines anciennes, témoins précieux d’une histoire artisanale et industrielle. Nous espérons qu’elles trouveront un repreneur passionné, afin qu’elles continuent à vivre plutôt que de finir à la ferraille.
-                </p>
-                   <section class="section">
-          <div class="columns is-centered is-variable is-4">
-              <div class="column is-narrow has-text-centered">
-                <span class="is-size-6 has-text-dark">Massicot</span>
-              <a href="#massicot-title" style="text-decoration:none;">
-                <figure class="image is-96x96" style="margin:auto;">
-                  <img src="images/Massicot_1.jpg" alt="Massicot miniature" style="border-radius:8px; border:2px solid #3273dc;">
-                </figure>
-              </a>
-            </div>
-            <div class="column is-narrow has-text-centered">
-                <span class="is-size-6 has-text-dark">Pantographe</span>
-              <a href="#pantographe-title" style="text-decoration:none;">
-                <figure class="image is-96x96" style="margin:auto;">
-                  <img src="images/Pantographe_1.jpg" alt="Pantographe miniature" style="border-radius:8px; border:2px solid #3273dc;">
-                </figure>
-              </a>
-            </div>
-            <div class="column is-narrow has-text-centered">
-                <span class="is-size-6 has-text-dark">Photograveuse</span>
-              <a href="#photograveuse-title" style="text-decoration:none;">
-                <figure class="image is-96x96" style="margin:auto;">
-                  <img src="images/photograveuse_1.png" alt="Photograveuse miniature" style="border-radius:8px; border:2px solid #3273dc;">
-                </figure>
-              </a>
-            </div>
-          </div>
-        </section>
+                <section  style="background-color: #d5cab1;padding: 3rem; color:black">
+                    <p class="is-size-5 has-text-centered">
+                        Notre société, forte de plus d’un demi-siècle d’activité, a consacré son savoir-faire à la photogravure et au prépresse, au service de l’imprimerie, du carton ondulé et même de l’impression de poches de perfusion. Aujourd’hui, l’activité s’arrête, mais il nous reste quelques machines anciennes, témoins précieux d’une histoire artisanale et industrielle. Nous espérons qu’elles trouveront un repreneur passionné, afin qu’elles continuent à vivre plutôt que de finir à la ferraille.
+                    </p>
+                       <section class="section">
+                              <div class="columns is-centered is-variable is-4">
+                                  <div class="column is-narrow has-text-centered">
+                    <span class="is-size-6 has-text-dark">Massicot</span>
+                                  <a href="#massicot-title" style="text-decoration:none;">
+                    <figure class="image is-96x96" style="margin:auto;">
+                      <img src="images/Massicot_1.jpg" alt="Massicot miniature" style="border-radius:8px; border:2px solid #3273dc;">
+                    </figure>
+                                  </a>
+                                </div>
+                                <div class="column is-narrow has-text-centered">
+                    <span class="is-size-6 has-text-dark">Pantographe</span>
+                                  <a href="#pantographe-title" style="text-decoration:none;">
+                    <figure class="image is-96x96" style="margin:auto;">
+                      <img src="images/Pantographe_1.jpg" alt="Pantographe miniature" style="border-radius:8px; border:2px solid #3273dc;">
+                    </figure>
+                                  </a>
+                                </div>
+                                <div class="column is-narrow has-text-centered">
+                    <span class="is-size-6 has-text-dark">Photograveuse</span>
+                                  <a href="#photograveuse-title" style="text-decoration:none;">
+                    <figure class="image is-96x96" style="margin:auto;">
+                      <img src="images/photograveuse_1.png" alt="Photograveuse miniature" style="border-radius:8px; border:2px solid #3273dc;">
+                    </figure>
+                                  </a>
+                                </div>
+                              </div>
+                            </section>
+                </section>
             </div>
         </section>
 
