--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <main class="container" id="main-content">
         <section class="section">
             <div class="container">
-                <section  style="background-color: #d5cab1;padding: 3rem; color:black">
+                <section  style="background-color: #cfcdc8b7;padding: 3rem; color:black; border-radius: 8px;">
                     <p class="is-size-5 has-text-centered">
                         Notre société, forte de plus d’un demi-siècle d’activité, a consacré son savoir-faire à la photogravure et au prépresse, au service de l’imprimerie, du carton ondulé et même de l’impression de poches de perfusion. Aujourd’hui, l’activité s’arrête, mais il nous reste quelques machines anciennes, témoins précieux d’une histoire artisanale et industrielle. Nous espérons qu’elles trouveront un repreneur passionné, afin qu’elles continuent à vivre plutôt que de finir à la ferraille.
                     </p>
