--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                        <section class="section">
                               <div class="columns is-centered is-variable is-4">
                                   <div class="column is-narrow has-text-centered">
-                    <span class="is-size-6 has-text-dark">Massicot</span>
+                    <span class="is-size-6 has-text-dark mt-2">Massicot</span>
                                   <a href="#massicot-title" style="text-decoration:none;">
                     <figure class="image is-96x96" style="margin:auto;">
                       <img src="images/Massicot_1.jpg" alt="Massicot miniature" style="border-radius:8px; border:2px solid #3273dc;">
@@ -103,7 +103,7 @@
                                   </a>
                                 </div>
                                 <div class="column is-narrow has-text-centered">
-                    <span class="is-size-6 has-text-dark">Pantographe</span>
+                    <span class="is-size-6 has-text-dark mt-2">Pantographe</span>
                                   <a href="#pantographe-title" style="text-decoration:none;">
                     <figure class="image is-96x96" style="margin:auto;">
                       <img src="images/Pantographe_1.jpg" alt="Pantographe miniature" style="border-radius:8px; border:2px solid #3273dc;">
@@ -111,7 +111,7 @@
                                   </a>
                                 </div>
                                 <div class="column is-narrow has-text-centered">
-                    <span class="is-size-6 has-text-dark">Photograveuse</span>
+                    <span class="is-size-6 has-text-dark mt-2">Photograveuse</span>
                                   <a href="#photograveuse-title" style="text-decoration:none;">
                     <figure class="image is-96x96" style="margin:auto;">
                       <img src="images/photograveuse_1.png" alt="Photograveuse miniature" style="border-radius:8px; border:2px solid #3273dc;">
